# HPC_matters

AMREX/_Base_Notes/: AMREX_GPU_HOST_DEVICE.md  Array4.md  ArrayND.md  ParallelFor_box_lambda.md  ParallelFor_to_launch_global.md  README.md  Reduction_Notes.md
AMREX/_Base_Tests/2DHeat/: Array2DView.H  Backend.H  Buffer.H  CMakeLists.txt  ParallelFor2D.H  Print2D.H  README.md  main.cpp
AMREX/_Base_Tests/ParallelFor/: Array2DView.H  Backend.H  Buffer.H  CMakeLists.txt  Design_Notes.md  ParallelFor2D.H  Print2D.H  README.md  main.cpp
AMREX/_Base_Tests/Reduction/: Backend.H  Buffer.H  CMakeLists.txt  README.md  Reduce.H  main.cpp
AMREX/_Base_Work/: AMReX_GPU_Porting_Overview.md  AMReX_GpuAtomic_GpuReduce_Notes.md  AMReX_GpuDevice_Notes.md  AMReX_GpuLaunchFunctsC_Notes.md  AMReX_GpuLaunchFunctsG_Notes.md  AMReX_GpuLaunch_Notes.md  AMReX_GpuMemory_Allocators_Notes.md  AMReX_GpuQualifiers_Notes.md  AMReX_MFParallelFor_Reduce_Notes.md  GPU_Launch_Chain_Overview.md  GPU_Memory_and_Lifecycle.md  GPU_Porting_Report_Draft.md  Minimal_Porting_Validation_Subset.md
C++/TheCherno/pointer/: main.cpp
C++/alignment_demo/: CMakeLists.txt  README.md
C++/alignment_demo/src/: main.cpp
C++/memory_pool/: CMakeLists.txt  README.md
C++/memory_pool/include/memory_pool/: fixed_block_memory_pool.hpp  gpu_allocator.hpp  linear_memory_pool.hpp  object_pool.hpp  pool_allocator.hpp
C++/memory_pool/src/: cuda_demo.cu  main.cpp
C++/templates/_Base_/: CMakeLists.txt  README.md
C++/templates/_Base_/src/: main.cpp
C++/templates/_If-Then-Else_/: CMakeLists.txt  README.md
C++/templates/_If-Then-Else_/src/: main.cpp
C++/templates/_Test_/: test_shared_meta  test_shared_meta.cu
C++/templates/_Variadic-Templates_/: CMakeLists.txt  README.md
C++/templates/_Variadic-Templates_/src/: main.cpp
CPU/nand2Tetris/: README.md
CUDA/: README.md
CUDA/cuda_graph_intro/: CMakeLists.txt  README.md
CUDA/cuda_graph_intro/results/: graph_benchmark.csv  summary.txt
CUDA/cuda_graph_intro/scripts/: plot_results.py
CUDA/cuda_graph_intro/src/: graph_bench.cu
CUDA/cuda_stream_intro/: CMakeLists.txt  README.md
CUDA/cuda_stream_intro/results/: stream_benchmark.csv  summary.txt
CUDA/cuda_stream_intro/scripts/: plot_results.py
CUDA/cuda_stream_intro/src/: stream_bench.cu
CUDA/earth_moon_sph/: .gitignore  CMakeLists.txt  README.md  main.cpp  render_gif.py  sph_kernels.cu  sph_shared.h  visualize.py
CUDA/kernel_type_playground/: README.md
CUDA/memory_coalescing_intro/: CMakeLists.txt  README.md
CUDA/memory_coalescing_intro/build_verify/: CMakeCache.txt
CUDA/memory_coalescing_intro/results/: memory_coalescing.csv  stride_summary.csv
CUDA/memory_coalescing_intro/scripts/: plot_results.py
CUDA/memory_coalescing_intro/src/: mem_coalescing_bench.cu
CUDA/nsight_compute_intro/: README.md
CUDA/nsight_systems_intro/: README.md
CUDA/reduction_scan_intro/: README.md
CUDA/register_Occupancy/: CMakeLists.txt  README.md
CUDA/register_Occupancy/build_sweep/tmp_128/: CMakeCache.txt  Makefile  cmake_install.cmake  reg_occ_bench
CUDA/register_Occupancy/build_sweep/tmp_16/: CMakeCache.txt  Makefile  cmake_install.cmake  reg_occ_bench
CUDA/register_Occupancy/build_sweep/tmp_24/: CMakeCache.txt  Makefile  cmake_install.cmake  reg_occ_bench
CUDA/register_Occupancy/build_sweep/tmp_32/: CMakeCache.txt  Makefile  cmake_install.cmake  reg_occ_bench
CUDA/register_Occupancy/build_sweep/tmp_48/: CMakeCache.txt  Makefile  cmake_install.cmake  reg_occ_bench
CUDA/register_Occupancy/build_sweep/tmp_64/: CMakeCache.txt  Makefile  cmake_install.cmake  reg_occ_bench
CUDA/register_Occupancy/build_sweep/tmp_8/: CMakeCache.txt  Makefile  cmake_install.cmake  reg_occ_bench
CUDA/register_Occupancy/build_sweep/tmp_80/: CMakeCache.txt  Makefile  cmake_install.cmake  reg_occ_bench
CUDA/register_Occupancy/build_sweep/tmp_96/: CMakeCache.txt  Makefile  cmake_install.cmake  reg_occ_bench
CUDA/register_Occupancy/results/: reg_occ_sweep.csv  reg_occ_tmp_128.csv  reg_occ_tmp_16.csv  reg_occ_tmp_24.csv  reg_occ_tmp_32.csv  reg_occ_tmp_48.csv  reg_occ_tmp_64.csv  reg_occ_tmp_8.csv  reg_occ_tmp_80.csv  reg_occ_tmp_96.csv  sweep_summary.csv
CUDA/register_Occupancy/scripts/: plot_results.py  plot_sweep.py  sweep_registers.sh
CUDA/register_Occupancy/src/: reg_occ_bench.cu
CUDA/shared_memory_bank_conflict/: CMakeLists.txt  README.md
CUDA/shared_memory_bank_conflict/build_verify/: CMakeCache.txt
CUDA/shared_memory_bank_conflict/results/: bank_conflict.csv  bank_conflict_summary.csv
CUDA/shared_memory_bank_conflict/scripts/: plot_results.py
CUDA/shared_memory_bank_conflict/src/: bank_conflict_bench.cu
CUDA/warp_schedule/: CMakeLists.txt  README.md  requirements.txt
CUDA/warp_schedule/results/: top10_configs.csv  warp_benchmark.csv
CUDA/warp_schedule/scripts/: plot_results.py
CUDA/warp_schedule/src/: warp_bench.cu
lessons/: build_section_notebooks.py  record.md  requirements.txt  section2.md  section3.md  section3_pinn_heat1d.executed.ipynb  section3_pinn_heat1d.ipynb  section4.md  section4_respinn_heat1d.ipynb  section5_conservation_pinn_advection.ipynb  section6_conservation_pinn_burgers.ipynb  section6_conservation_pinn_burgers.md  section6_conservation_pinn_burgers.py  section7_double_pendulum_hamiltonian.ipynb  section7_double_pendulum_hamiltonian.md  section7_double_pendulum_hamiltonian.py
